--- a/server/http/local-catalog-list/local-catalog-list-cs.html
+++ b/server/http/local-catalog-list/local-catalog-list-cs.html
@@ -24,9 +24,7 @@
         <gov-card>
           <div class="gov-card__header">
             <a href="{{publisher.iri}}">
-              <h3 class="gov-card__title inline">
-                {{publisher.label}}
-              </h3>
+              <h3 class="gov-card__title inline">{{publisher.label}}</h3>
               <gov-icon name="box-arrow-up-right"></gov-icon>
             </a>
           </div>
