--- a/server/http/publisher-list/publisher-list-cs.html
+++ b/server/http/publisher-list/publisher-list-cs.html
@@ -3,7 +3,7 @@
 
 <head>
   {{> head }}
-  <title>Lokální katalogy - Národní katalog otevřených dat (NKOD)</title>
+  <title>Poskytovatelé - Národní katalog otevřených dat (NKOD)</title>
   <meta name="description" content="Portál otevřených dat a Národní katalog otevřených dat České republiky" />
   <link rel="canonical" href="/publishers">
   <link rel="alternate" href="/poskytovatelé" hreflang="cs">
@@ -49,12 +49,12 @@
                 {{/if}}
                 {{#if vdfOriginator}}
                 <gov-chip variant="primary" type="outlined" size="xs">
-                  Poskytovatel
+                  VDF Původce
                 </gov-chip>
                 {{/if}}
                 {{#if vdfPublisher}}
                 <gov-chip variant="primary" type="outlined" size="xs">
-                  Původce
+                  VDF Poskytovatel
                 </gov-chip>
                 {{/if}}
                 {{/with}}
