--- a/server/http/suggestion-detail/suggestion-detail-cs.html
+++ b/server/http/suggestion-detail/suggestion-detail-cs.html
@@ -3,7 +3,7 @@
 
 <head>
   {{> head }}
-  <title>{{dataset.heading.title}} - Národní katalog otevřených dat (NKOD)</title>
+  <title>Žádost - Národní katalog otevřených dat (NKOD)</title>
   <meta name="description" content="Portál otevřených dat a Národní katalog otevřených dat České republiky" />
   <link rel="canonical" href="/suggestion-for-dataset-to-be-opened">
   <link rel="alternate" href="/návrh-na-datovou-sadu-k-otevření" hreflang="cs">
