--- a/server/http/application-detail/application-detail-en.html
+++ b/server/http/application-detail/application-detail-en.html
@@ -1,17 +1,144 @@
-<html lang="en">
+<!DOCTYPE html>
+<html dir="ltr" lang="en">
 
 <head>
   {{> head }}
-  <!-- Site specific. -->
-  <title>Application - Národní katalog otevřených dat (NKOD)</title>
-  <meta name="description" content="Portál otevřených dat a Národní katalog otevřených dat České republiky"/>
-  <!--  -->
+  <title>Applications - National open data catalog (NKOD)</title>
+  <meta name="description" content="Open data portal and National open data catalog of the Czech Republic" />
+  <link rel="canonical" href="/application">
+  <link rel="alternate" href="/detail-aplikace" hreflang="cs">
+  <link rel="alternate" href="/application" hreflang="en">
+  <link type="text/css" rel="stylesheet" href="/assets/catalog/css/resource-list.css">
 </head>
 
 <body>
   {{#with navigation}} {{> navigation }} {{/with}}
-  <gov-container>
-    <!-- TODO -->
+  <gov-container class="application-container">
+    {{#with application}}
+    <div>
+      {{#if author.titleVisible}}
+      <h1>{{title}}</h1>
+      <h2 class="inline">
+        {{author.title}}
+      </h2>
+      {{else}}
+      <h1 class="inline">{{title}}</h1>
+      {{/if}}
+      {{#if author.iriVisible}}
+      <a href="{{author.iri}}" title="Go to link" rel="nofollow noopener noreferrer" target="_blank">
+        <gov-icon name="box-arrow-up-right"></gov-icon>
+      </a>
+      {{/if}}
+    </div>
+    <br/>
+    <p>
+      {{breaklines description}}
+    </p>
+    <gov-grid>
+      <gov-grid-item size-sm="6/12" size-md="3/12">
+        <dl>
+          <dt>State</dt>
+          {{#each states}}
+          <dd>
+            <a href="{{href}}">
+              {{label}}
+            </a>
+            &nbsp;
+            <a href="{{iri}}" title="Go to link" rel="nofollow noopener noreferrer" target="_blank">
+              <gov-icon name="box-arrow-up-right"></gov-icon>
+            </a>
+          </dd>
+          {{/each}}
+        </dl>
+      </gov-grid-item>
+      <gov-grid-item size-sm="6/12" size-md="3/12">
+        <dl>
+          <dt>Theme</dt>
+          {{#each themes}}
+          <dd>
+            <a href="{{href}}">
+              {{label}}
+            </a>
+            &nbsp;
+            <a href="{{iri}}" title="Go to link" rel="nofollow noopener noreferrer" target="_blank">
+              <gov-icon name="box-arrow-up-right"></gov-icon>
+            </a>
+          </dd>
+          {{/each}}
+        </dl>
+      </gov-grid-item>
+      <gov-grid-item size-sm="6/12" size-md="3/12">
+        <dl>
+          <dt>Platform</dt>
+          {{#each platforms}}
+          <dd>
+            <a href="{{href}}">
+              {{label}}
+            </a>
+            &nbsp;
+            <a href="{{iri}}" title="Go to link" rel="nofollow noopener noreferrer" target="_blank">
+              <gov-icon name="box-arrow-up-right"></gov-icon>
+            </a>
+          </dd>
+          {{/each}}
+        </dl>
+      </gov-grid-item>
+      <gov-grid-item size-sm="6/12" size-md="3/12">
+        <dl>
+          <dt>Type</dt>
+          {{#each types}}
+          <dd>
+            <a href="{{href}}">
+              {{label}}
+            </a>
+            &nbsp;
+            <a href="{{iri}}" title="Go to link" rel="nofollow noopener noreferrer" target="_blank">
+              <gov-icon name="box-arrow-up-right"></gov-icon>
+            </a>
+          </dd>
+          {{/each}}
+        </dl>
+      </div>
+    </gov-grid>
+    <gov-grid>
+      <gov-grid-item size-sm="6/12" size-md="3/12">
+        <dl>
+          <dt>Publication date</dt>
+          <dd>{{published}}</dd>
+        </dl>
+      </gov-grid-item>
+      <gov-grid-item size-sm="6/12" size-md="3/12">
+        <dl>
+          <dt>Date last modified</dt>
+          <dd>{{modified}}</dd>
+        </dl>
+      </gov-grid-item>
+    </gov-grid>
+    <div>
+      <gov-button variant="primary" type="outlined" href="{{link}}" expanded="true" rel="nofollow noopener noreferrer">
+        Navigate to application
+      </gov-button>
+    </div>
+    {{/with}}
+    <br/>
+    {{#with datasets}}
+    {{#if visible}}
+    <h2>Used datasets</h2>
+    <br/>
+    <div class="resource-list">
+      {{#each items}}
+      <div class="resource-list-item">
+        <a href="{{href}}" rel="nofollow noopener noreferrer">
+          <h3>{{title}}</h3>
+        </a>
+        <p>
+          {{description}}
+        </p>
+      </div>
+      {{/each}}
+    </div>
+    {{/if}}
+    {{/with}}
   </gov-container>
   {{#with footer}} {{> footer }} {{/with}}
 </body>
