--- a/server/http/application-list/application-list-en.html
+++ b/server/http/application-list/application-list-en.html
@@ -1,17 +1,79 @@
-<html lang="en">
+<!DOCTYPE html>
+<html dir="ltr" lang="en">
 
 <head>
   {{> head }}
-  <!-- Site specific. -->
-  <title>Applications - Národní katalog otevřených dat (NKOD)</title>
-  <meta name="description" content="Portál otevřených dat a Národní katalog otevřených dat České republiky"/>
-  <!--  -->
+  <title>Application - National open data catalog (NKOD)</title>
+  <meta name="description" content="Open data portal and National open data catalog of the Czech Republic" />
+  <link rel="canonical" href="/applications">
+  <link rel="alternate" href="/aplikace" hreflang="cs">
+  <link rel="alternate" href="/applications" hreflang="en">
+  <link type="text/css" rel="stylesheet" href="/assets/catalog/css/resource-list.css">
+  <script src="/assets/catalog/js/application-list.js"></script>
 </head>
 
 <body>
   {{#with navigation}} {{> navigation }} {{/with}}
-  <gov-container>
-    <!-- TODO -->
+  <gov-container class="applications-container">
+    <gov-grid>
+      <gov-grid-item size-sm="12/12" size-md="4/12">
+        {{#each facets}} {{>facet}} {{/each}}
+      </gov-grid-item>
+      <gov-grid-item size-sm="12/12" size-md="8/12" class="p-2">
+        <!-- Search. -->
+        {{#with search}}
+        <gov-form-search variant="primary" id="search" href="{{search-href}}">
+          <gov-form-input slot="input"size="m" placeholder="What you're looking for" wcag-label="search" value="{{value}}"></gov-form-input>
+          <gov-button slot="button" variant="primary" size="s" wcag-label="search">
+            Search
+          </gov-button>
+        </gov-form-search>
+        <gov-accordion size="xs">
+          <gov-accordion-item>
+            <h3 slot="label">Extended search</h3>
+            <div class="extended-search">
+              <gov-button slot="button" variant="warning" size="m" href="{{clear-href}}" wcag-label="Clear filters">
+                Clear filters
+              </gov-button>
+            </div>
+          </gov-accordion-item>
+        </gov-accordion>
+        {{/with}}
+        <!-- Result bar. -->
+        {{#with result-bar}} {{> result-bar }} {{/with}}
+        <!-- Datasets -->
+        <hr/>
+        <div class="p-2 resource-list">
+          {{#each documents}}
+          <div class="p-2 resource-list-item">
+            <a href="{{href}}" class="flex-space-between">
+              <h3 class="inline">
+                {{title}}
+              </h3>
+              <gov-icon name="chevron-right"></gov-icon>
+            </a>
+            <p class="description-preview">
+              {{breaklines description}}
+            </p>
+            <div>
+              {{#each themes}}
+              <gov-tooltip>
+                <gov-chip variant="primary" type="outlined" size="xs">
+                  {{label}}
+                </gov-chip>
+                <gov-tooltip-content>
+                  The dataset belongs to the topic {{label}}.
+                </gov-tooltip-content>
+              </gov-tooltip>
+              {{/each}}
+            </div>
+          </div>
+          <hr/>
+          {{/each}}
+        </div>
+        {{#with pagination}} {{> pagination }} {{/with}}
+      </gov-grid-item>
+    </gov-grid>
   </gov-container>
   {{#with footer}} {{> footer }} {{/with}}
 </body>
