--- a/server/http/dataset-detail/dataset-detail-en.html
+++ b/server/http/dataset-detail/dataset-detail-en.html
@@ -1,21 +1,519 @@
-<html lang="en">
+<!DOCTYPE html>
+<html dir="ltr" lang="en">
 
 <head>
   {{> head }}
-  <!-- Site specific. -->
-  <title>{{heading.title}} - National Open Data Catalog (NODC)</title>
+  <title>{{dataset.heading.title}} - National open data catalog (NKOD)</title>
+  <meta name="description" content="Open data portal and National open data catalog of the Czech Republic" />
   <link rel="canonical" href="/dataset">
   <link rel="alternate" href="/datová-sada" hreflang="cs">
   <link rel="alternate" href="/dataset" hreflang="en">
-  <script src="/aplikace/assets/js/dataset-detail.js"></script>
+  <link type="text/css" rel="stylesheet" href="/assets/catalog/css/dataset-detail.css">
+  <script src="/assets/catalog/js/dataset-detail.js"></script>
 </head>
 
-<body>
+<body class="dataset-detail">
   {{#with navigation}} {{> navigation }} {{/with}}
-  <gov-container>
-    <!-- TODO -->
+  {{#with dataset}}
+  <gov-container class="dataset-container" data-iri="{{iri}}">
+    {{#with heading}}
+    <div>
+      <h1 class="inline">{{title}}</h1>
+      <span class="x-large">
+        <a href="{{openUrl}}"><gov-icon name="box-arrow-up-right" title="Dereference link"></gov-icon></a>
+        {{#if editUrl}}<a href="{{editUrl}}"><gov-icon name="pencil" type="bootstrap" title="Edit dataset"></gov-icon></a>{{/if}}
+        {{#if copyUrl}}<a href="{{copyUrl}}"><gov-icon name="copy" title="Copy as new dataset"></gov-icon></a>{{/if}}
+        {{#if deleteDatasetUrl}}<a href="{{deleteDatasetUrl}}"><gov-icon name="trash" title="Delete catalog"></gov-icon></a>{{/if}}
+        {{#if deleteCatalogUrl}}<a href="{{deleteCatalogUrl}}"><gov-icon name="trash" title="Delete catalog"></gov-icon></a>{{/if}}
+      </span>
+      {{/with}}
+      {{#with publisher}}
+      <a href="{{href}}">
+        <h2>{{label}}</h2>
+      </a>
+    </div>
+    {{/with}}
+    {{#if applicableLegislationVisible}}
+    <div class="applicable-legislation chip-container mb-2">
+      {{#each applicableLegislation}}
+        {{#if chip}}<gov-chip variant="{{chip.variant}}" type="outlined" size="s">{{chip.label}}</gov-chip>{{/if}}
+      {{/each}}
+      <gov-chip variant="primary" type="outlined" size="s" class="legislation-list" tag="button">
+        §
+        <ul>
+          {{#each applicableLegislation}}
+          <li>
+            {{#if chip}}<gov-chip variant="{{chip.variant}}" type="outlined" size="s">{{chip.label}}</gov-chip>{{/if}}
+            <a href="{{url}}" rel="nofollow noopener noreferrer" target="_blank">{{label}}</a>
+          </li>
+          {{/each}}
+        </ul>
+      </gov-chip>
+    </div>
+    {{/if}}
+    <div class="chip-container mb-2"> <!-- TODO: Add visibility check. -->
+      {{#each keywords}}
+      <gov-chip variant="primary" type="outlined" size="s" href="{{href}}">
+        {{label}}
+      </gov-chip>
+      {{/each}}
+    </div>
+    <p>
+      {{breaklines description}}
+    </p>
+    <gov-grid>
+      <gov-grid-item size-sm="6/12" size-md="3/12">
+        {{#if themesVisible}}
+        <dl>
+          <dt>Dataset theme</dt>
+          {{#each themes}}
+          <dd>
+            <a href="{{href}}">
+              {{label}}
+            </a>
+            &nbsp;
+            <a href="{{iri}}" title="Go to link" rel="nofollow noopener noreferrer" target="_blank">
+              <gov-icon name="box-arrow-up-right"></gov-icon>
+            </a>
+          </dd>
+          {{/each}}
+        </dl>
+        {{/if}}
+        {{#if euroVocThemesVisible}}
+        <dl>
+          <dt>EuroVoc theme</dt>
+          {{#each euroVocThemes}}
+          <dd>
+            <a href="{{href}}">
+              {{label}}
+            </a>
+            &nbsp;
+            <a href="{{iri}}" title="Go to link" rel="nofollow noopener noreferrer" target="_blank">
+              <gov-icon name="box-arrow-up-right"></gov-icon>
+            </a>
+          </dd>
+          {{/each}}
+        </dl>
+        {{/if}}
+      </gov-grid-item>
+      <gov-grid-item size-sm="6/12" size-md="3/12">
+        {{#if spatialVisible}}
+        <dl>
+          <dt>Spatial coverage</dt>
+          {{#each spatial}}
+          <dd>
+            {{label}}
+            &nbsp;
+            <a href="{{iri}}" title="Go to link" rel="nofollow noopener noreferrer" target="_blank">
+              <gov-icon name="box-arrow-up-right"></gov-icon>
+            </a>
+          </dd>
+          {{/each}}
+        </dl>
+        {{/if}}
+        {{#if spatialResolutionInMetersVisible}}
+        <dl>
+          <dt>Spatial resolution in meters</dt>
+          <dd>
+            {{spatialResolutionInMeters}}
+          </dd>
+        </dl>
+        {{/if}}
+        {{#if temporalVisible}}
+        <dl>
+          <dt>Temporal coverage</dt>
+          <dd>
+            {{temporal}}
+          </dd>
+        </dl>
+        {{/if}}
+        {{#if temporalResolutionVisible}}
+        <dl>
+          <dt>Temporal resolution</dt>
+          <dd>
+            {{temporalResolution}}
+          </dd>
+        </dl>
+        {{/if}}
+      </gov-grid-item>
+      <gov-grid-item size-sm="6/12" size-md="3/12">
+        {{#if documentationVisible}}
+        <dl>
+          <dt>Documentation</dt>
+          {{#each documentation}}
+          <dd class="documentation">
+            <a href="{{this}}">Show documentation</a>
+            <span class="quality"></span>
+          </dd>
+          {{/each}}
+        </dl>
+        {{/if}}
+        {{#if contactVisible}}
+        <dl>
+          <dt>Contact point</dt>
+          {{#each contact}}
+          <dd>
+            <a href="{{href}}">{{label}}</a>
+          </dd>
+          {{/each}}
+        </dl>
+        {{/if}}
+        {{#if conformsToVisible}}
+        <dl>
+          <dt>Specification</dt>
+          {{#each conformsTo}}
+          <dd class="specification">
+            <a href="{{href}}">{{label}}</a>
+            <span class="quality"></span>
+          </dd>
+          {{/each}}
+        </dl>
+        {{/if}}
+      </gov-grid-item>
+      <gov-grid-item size-sm="6/12" size-md="3/12">
+        {{#if frequencyVisible}}
+        <dl>
+          <dt>Frequency</dt>
+          <dd>
+            {{frequency.label}}
+            &nbsp;
+            <a href="{{frequency.iri}}" title="Go to link" rel="nofollow noopener noreferrer" target="_blank">
+              <gov-icon name="box-arrow-up-right"></gov-icon>
+            </a>
+          </dd>
+        </dl>
+        {{/if}}
+        {{#if hvdCategoryVisible}}
+        <dl>
+          <dt>HVD categories</dt>
+          {{#each hvdCategory}}
+          <dd>
+            <a href="{{href}}">
+              {{label}}
+            </a>
+            &nbsp;
+            <a href="{{iri}}" title="Go to link" rel="nofollow noopener noreferrer" target="_blank">
+              <gov-icon name="box-arrow-up-right"></gov-icon>
+            </a>
+          </dd>
+          {{/each}}
+        </dl>
+        {{/if}}
+      </gov-grid-item>
+    </gov-grid>
+    {{#if parentDataset}}
+    <p>
+      This dataset is part of the dataset series
+      <a href="{{parentDataset.href}}" title="Go to data series">{{parentDataset.label}}</a>.
+    </p>
+    {{/if}}
+    <br />
   </gov-container>
+  {{/with}}
+  {{#with distributions}}
+  {{#if visible}}
+  <gov-container class="distribution-container">
+    <h2>Distributions of the dataset</h2>
+    <br/>
+    <gov-grid>
+      {{#each items}}
+      <gov-grid-item size-sm="12/12" size-md="6/12" size-lg="4/12">
+        <div class="distribution-item-wrap m-1 p-2" data-iri="{{iri}}">
+          <h3 class="gov-text--xl">{{title}}</h3>
+          <h4 class="gov-text--xl gov-color--secondary-700">{{format}}</h4>
+          {{#if applicableLegislationVisible}}
+          <div class="applicable-legislation chip-container mb-2">
+            {{#each applicableLegislation}}
+              {{#if chip}}<gov-chip variant="{{chip.variant}}" type="outlined" size="s">{{chip.label}}</gov-chip>{{/if}}
+            {{/each}}
+            <gov-chip variant="primary" type="outlined" size="s" class="legislation-list" tag="button">
+              §
+              <ul>
+                {{#each applicableLegislation}}
+                <li>
+                  {{#if chip}}<gov-chip variant="{{chip.variant}}" type="outlined" size="s">{{chip.label}}</gov-chip>{{/if}}
+                  <a href="{{url}}" rel="nofollow noopener noreferrer" target="_blank">{{label}}</a>
+                </li>
+                {{/each}}
+              </ul>
+            </gov-chip>
+          </div>
+          {{/if}}
+          <div class="flex-row">
+            {{#if missingLegal}}
+            <div class="distribution-item-wrap-column">
+              <h5 class="gov-text--l gov-color--secondary-700">The terms of use of the distribution are not specified</h5>
+            </div>
+            {{/if}}
+            {{#if dcatApLegal}}
+            <div class="distribution-item-wrap-column">
+              <a href="{{license}}" rel="nofollow noopener noreferrer" target="_blank">
+                Terms of use
+              </a>
+            </div>
+            {{/if}}
+            {{#if dcatApCzLegal}}{{#with dcatApCzLegal}}
+            <div class="distribution-item-wrap-column">
+              <div>
+                <h5 class="gov-text--l gov-color--secondary-700">Terms of use</h5>
+              </div>
+              <ul>
+                <li class="authorship">
+                  {{#with authorship}}
+                  {{#if showQuality}}<span class="quality"></span>{{/if}}
+                  <div>
+                    {{#if href}}
+                      <a href="{{href}}" rel="nofollow noopener noreferrer" target="_blank">{{label}}</a>
+                    {{else}}
+                      {{label}}
+                    {{/if}}
+                    <gov-icon name="{{icon}}" class="{{iconStyle}}" title="{{iconTitle}}" type="bootstrap"></gov-icon>
+                  </div>
+                  {{/with}}
+                  {{#if authorship.author}}
+                    {{authorship.author}}
+                  {{else}}
+                    Copyrighted work
+                  {{/if}}
+                </li>
+                <li class="databaseAuthorship">
+                  {{#with databaseAuthorship}}
+                  {{#if showQuality}}<span class="quality"></span>{{/if}}
+                  <div>
+                    {{#if href}}
+                      <a href="{{href}}" rel="nofollow noopener noreferrer" target="_blank">{{label}}</a>
+                    {{else}}
+                      {{label}}
+                    {{/if}}
+                    <gov-icon name="{{icon}}" class="{{iconStyle}}" title="{{iconTitle}}" type="bootstrap"></gov-icon>
+                  </div>
+                  {{/with}}
+                  {{#if databaseAuthorship.author}}
+                    {{databaseAuthorship.author}}
+                  {{else}}
+                    Copyrighted database
+                  {{/if}}
+                </li>
+                <li class="protectedDatabaseAuthorship">
+                  {{#with protectedDatabaseAuthorship}}
+                  {{#if showQuality}}<span class="quality"></span>{{/if}}
+                  <div>
+                    {{#if href}}
+                      <a href="{{href}}" rel="nofollow noopener noreferrer" target="_blank">{{label}}</a>
+                    {{else}}
+                      {{label}}
+                    {{/if}}
+                    <gov-icon name="{{icon}}" class="{{iconStyle}}" title="{{iconTitle}}" type="bootstrap"></gov-icon>
+                  </div>
+                  {{/with}}
+                  {{#if protectedDatabaseAuthorship.author}}
+                    {{protectedDatabaseAuthorship.author}}
+                  {{else}}
+                  Sui generis db rights
+                  {{/if}}
+                </li>
+                <li>
+                  {{#with personalData}}
+                  <div>
+                    {{label}}
+                    <gov-icon name="{{icon}}" class="{{iconStyle}}" title="{{iconTitle}}" type="bootstrap"></gov-icon>
+                  </div>
+                  {{/with}}
+                  Personal data
+                </li>
+              </ul>
+            </div>
+            {{/with}}{{/if}}
+            {{#if distribution}}{{#with distribution}}
+            <div class="distribution-item-wrap-column">
+              <div>
+                <h5 class="gov-text--l gov-color--secondary-700">Downloadable file</h5>
+              </div>
+              <ul>
+                {{#if downloadArrayVisible}}
+                <li class="download">
+                  {{#each downloadArray}}
+                  <a href="{{this}}">Download</a>
+                  <span class="quality"></span>
+                  {{/each}}
+                </li>
+                {{/if}}
+                {{#if schemaArrayVisible}}
+                <li class="schema">
+                  {{#each schemaArray}}
+                  <a href="{{this}}">Schema</a>
+                  <span class="quality"></span>
+                  {{/each}}
+                </li>
+                {{/if}}
+                <li>
+                  <div class="mediaType">
+                    {{mediaType.label}}
+                    <a href="{{mediaType.iri}}">
+                      <gov-icon name="box-arrow-up-right"></gov-icon>
+                    </a>
+                    <span class="quality"></span>
+                  </div>
+                  Media type
+                </li>
+                {{#if compressFormat}}
+                <li>
+                  <div>
+                    {{compressFormat.label}}
+                    <a href="{{compressFormat.iri}}">
+                      <gov-icon name="box-arrow-up-right"></gov-icon>
+                    </a>
+                  </div>
+                  Compress format
+                </li>
+                {{/if}}
+                {{#if packageFormat}}
+                <li>
+                  <div>
+                    {{packageFormat.label}}
+                    <a href="{{packageFormat.iri}}">
+                      <gov-icon name="box-arrow-up-right"></gov-icon>
+                    </a>
+                  </div>
+                  Package format
+                </li>
+                {{/if}}
+              </ul>
+            </div>
+            {{/with}}{{/if}}
+            {{#if dataService}}{{#with dataService}}
+            <div class="distribution-item-wrap-column">
+              <div>
+                <h5 class="gov-text--l gov-color--secondary-700">
+                  Data service
+                </h5>
+              </div>
+              <ul>
+                <li class="endpointDescription">
+                  <a href="{{endpointDescription}}">Endpoint description"</a>
+                  <span class="quality"></span>
+                </li>
+                <li class="endpointUrl">
+                  <a href="{{endpointUrl}}">Endpoint</a>
+                  <span class="quality"></span>
+                  {{#if sparqlEditor}}
+                  <br/>
+                  <a href="{{sparqlEditor}}">SPARQL query</a>
+                  {{/if}}
+                  {{#if classesAndProperties}}
+                  <br/>
+                  <a href="{{classesAndProperties}}">Classes and properties</a>
+                  {{/if}}
+                </li>
+                {{#if schemaArrayVisible}}
+                <li class="schema">
+                  {{#each schemaArray}}
+                  <a href="{{this}}">Schema</a>
+                  <span class="quality"></span>
+                  {{/each}}
+                </li>
+                {{/if}}
+                {{#if mediaType}}
+                <li>
+                  <div class="mediaType">
+                    {{mediaType.label}}
+                    <a href="{{mediaType.iri}}">
+                      <gov-icon name="box-arrow-up-right"></gov-icon>
+                    </a>
+                    <span class="quality"></span>
+                  </div>
+                  Media type
+                </li>
+                {{/if}}
+                {{#if compressFormat}}
+                <li>
+                  <div>
+                    {{compressFormat.label}}
+                    <a href="{{compressFormat.iri}}">
+                      <gov-icon name="box-arrow-up-right"></gov-icon>
+                    </a>
+                  </div>
+                  Compress format
+                </li>
+                {{/if}}
+                {{#if packageFormat}}
+                <li>
+                  <div>
+                    {{packageFormat.label}}
+                    <a href="{{packageFormat.iri}}">
+                      <gov-icon name="box-arrow-up-right"></gov-icon>
+                    </a>
+                  </div>
+                  Package format
+                </li>
+                {{/if}}
+              </ul>
+            </div>
+            {{/with}}{{/if}}
+          </div>
+        </div>
+      </gov-grid-item >
+      {{/each}}
+    </gov-grid>
+    {{#with pagination}} {{#if visible}}
+    <gov-grid-item size-sm="12/12" size-md="10/12">
+      <gov-pagination total="{{total}}" current="{{currentPage}}" page-size="{{pageSize}}"
+        wcag-label="Pagination for the documents section"
+        wcag-select-label="Select page"
+        link="{{linkTemplate}}">
+      </gov-pagination>
+    </gov-grid-item>
+    {{/if}} {{/with}}
+  </gov-container>
+  {{/if}}
+  {{/with}}
+  {{#with datasetSeries}}
+  {{#if visible}}
+  <gov-container class="dataset-list-container">
+    <h2>Datasets of this dataset series</h2>
+    <br />
+    <div class="resource-list">
+      {{#each items}}
+      <div class="resource-list-item">
+        <a href="{{href}}" rel="nofollow noopener noreferrer">
+          <h3>{{title}}</h3>
+        </a>
+        <p>
+          {{description}}
+        </p>
+      </div>
+      {{/each}}
+    </div>
+    <a href="{{showAllHref}}">
+      See all datasets of the dataset series in the dataset list view
+    </a>
+  </gov-container>
+  {{/if}}
+  {{/with}}
+  {{#with applications}}
+  {{#if visible}}
+  <gov-container class="application-list-container">
+    <h2>Applications using this dataset</h2>
+    <br />
+    <div class="document-list">
+      {{#each items}}
+      <div class="document-list-item">
+        <a href="{{href}}" rel="nofollow noopener noreferrer">
+          <h3>{{title}}</h3>
+        </a>
+        <p>
+          {{description}}
+        </p>
+      </div>
+      {{/each}}
+    </div>
+  </gov-container>
+  {{/if}}
+  {{/with}}
   {{#with footer}} {{> footer }} {{/with}}
+  <script type="application/ld+json">{{{metadataAsString}}}</script>
+  <!--  -->
+  <gov-modal id="legislation-list-modal" label="Relevant legislation"></gov-modal>
 </body>
 
 </html>
