--- a/server/http/suggestion-detail/suggestion-detail-en.html
+++ b/server/http/suggestion-detail/suggestion-detail-en.html
@@ -1,17 +1,111 @@
-<html lang="en">
+<!DOCTYPE html>
+<html dir="ltr" lang="en">
 
 <head>
   {{> head }}
-  <!-- Site specific. -->
-  <title>Suggestion - Národní katalog otevřených dat (NKOD)</title>
-  <meta name="description" content="Portál otevřených dat a Národní katalog otevřených dat České republiky"/>
-  <!--  -->
+  <title>Suggestion - National open data catalog (NKOD)</title>
+  <meta name="description" content="Open data portal and National open data catalog of the Czech Republic" />
+  <link rel="canonical" href="/suggestion-for-dataset-to-be-opened">
+  <link rel="alternate" href="/návrh-na-datovou-sadu-k-otevření" hreflang="cs">
+  <link rel="alternate" href="/suggestion-for-dataset-to-be-opened" hreflang="en">
+  <link type="text/css" rel="stylesheet" href="/assets/catalog/css/resource-list.css">
 </head>
 
 <body>
   {{#with navigation}} {{> navigation }} {{/with}}
-  <gov-container>
-    <!-- TODO -->
+  <gov-container class="suggestion-container">
+    {{#with suggestion}}
+    <div>
+      <h1>{{title}}</h1>
+      <h2 class="inline">
+        {{publisher.title}}
+      </h2>
+      <a href="{{publisher.iri}}" title="Go to link" rel="nofollow noopener noreferrer" target="_blank">
+        <gov-icon name="box-arrow-up-right"></gov-icon>
+      </a>
+    </div>
+    <br />
+    <p>
+      {{breaklines description}}
+    </p>
+    <gov-grid>
+      <gov-grid-item size-sm="6/12" size-md="3/12">
+        <dl>
+          <dt>Theme</dt>
+          {{#each themes}}
+          <dd>
+            <a href="{{href}}">
+              {{label}}
+            </a>
+            &nbsp;
+            <a href="{{iri}}" title="Go to link" rel="nofollow noopener noreferrer" target="_blank">
+              <gov-icon name="box-arrow-up-right"></gov-icon>
+            </a>
+          </dd>
+          {{/each}}
+        </dl>
+      </gov-grid-item>
+      <gov-grid-item size-sm="6/12" size-md="3/12">
+        <dl>
+          <dt>Created</dt>
+          <dd>{{created}}</dd>
+        </dl>
+      </gov-grid-item>
+      <gov-grid-item size-sm="6/12" size-md="3/12">
+        <dl>
+          <dt>State</dt>
+          <dd>{{state.label}}</dd>
+        </dl>
+      </gov-grid-item>
+      {{#if publication_plan_visible}}
+      <gov-grid-item size-sm="6/12" size-md="3/12">
+        <dl>
+          <dt>Publication plan</dt>
+          <dd>{{publication_plan}}</dd>
+        </dl>
+      </gov-grid-item>
+      {{/if}}
+    </gov-grid>
+    <gov-grid>
+      <gov-grid-item size-sm="6/12" size-md="3/12">
+        <dl>
+          <dt>Obliged entity according to law number 106/1999</dt>
+          <dd>{{#if mandatory_106}}Yes{{else}}No{{/if}}</dd>
+        </dl>
+      </gov-grid-item>
+      <gov-grid-item size-sm="6/12" size-md="3/12">
+        <dl>
+          <dt>According to special regulation an impediment exists</dt>
+          <dd>{{#if obstacle_special_regulation}}Yes{{else}}No{{/if}}</dd>
+        </dl>
+      </gov-grid-item>
+      <gov-grid-item size-sm="6/12" size-md="3/12">
+        <dl>
+          <dt>According to law number 106/1999 an impediment exists</dt>
+          <dd>{{#if obstacle_106}}Yes{{else}}No{{/if}}</dd>
+        </dl>
+      </gov-grid-item>
+    </gov-grid>
+    {{/with}}
+    <br />
+    {{#with datasets}}
+    {{#if visible}}
+    <h2>Datasets</h2>
+    <br/>
+    <div class="p-2 resource-list">
+      {{#each items}}
+      <div class="resource-list-item">
+        <a href="{{href}}" rel="nofollow noopener noreferrer">
+          <h3>{{title}}</h3>
+        </a>
+        <p>
+          {{description}}
+        </p>
+      </div>
+      {{/each}}
+    </div>
+    {{/if}}
+    {{/with}}
   </gov-container>
   {{#with footer}} {{> footer }} {{/with}}
 </body>
