--- a/server/http/dataset-list/dataset-list-cs.html
+++ b/server/http/dataset-list/dataset-list-cs.html
@@ -60,7 +60,7 @@
                 </div>
                 <div class="flex-row align-items-center">
                   <gov-form-switch data-type="dynamic-data" {{#if query.dynamicData}}checked{{/if}}>
-                    <gov-form-label slot="label">Dynamické data</gov-form-label>
+                    <gov-form-label slot="label">Dynamická data</gov-form-label>
                   </gov-form-switch>
                   &nbsp;
                   <gov-tooltip>
