--- a/server/http/dataset-detail/dataset-detail-en.html
+++ b/server/http/dataset-detail/dataset-detail-en.html
@@ -220,7 +220,7 @@
       <gov-grid-item size-sm="12/12" size-md="6/12" size-lg="4/12">
         <div class="distribution-item-wrap m-1 p-2" data-iri="{{iri}}">
           <h3 class="gov-text--xl">{{title}}</h3>
-          <h4 class="gov-text--xl gov-color--secondary-700">{{format}}</h4>
+          <h4 class="gov-text--xl gov-color--secondary-700 break-word-wrap">{{format}}</h4>
           {{#if applicableLegislationVisible}}
           <div class="applicable-legislation chip-container mb-2">
             {{#each applicableLegislation}}
