--- a/server/http/local-catalog-list/local-catalog-list-en.html
+++ b/server/http/local-catalog-list/local-catalog-list-en.html
@@ -32,7 +32,7 @@
             <div class="gov-card__main">
               <div>
                 {{title}}
-                <a href="{{iri}}">
+                <a href="{{url}}">
                   <gov-icon name="box-arrow-up-right"></gov-icon>
                 </a>
               </div>
