--- a/server/http/local-catalog-list/local-catalog-list-cs.html
+++ b/server/http/local-catalog-list/local-catalog-list-cs.html
@@ -45,7 +45,7 @@
             </div>
             <div class="gov-card__footer" style="font-size: x-large;">
               <a href="{{homepage}}" title="Domovská stránka katalogu"><gov-icon name="house-door-fill"></gov-icon></a>
-              <a href="{{endpointURL}}" title="SPARQL endpoint"><gov-icon name="link-45deg"></gov-icon></a>
+              <a href="{{endpointURL}}" title="Endpoint"><gov-icon name="link-45deg"></gov-icon></a>
               <a href="{{deleteUrl}}" title="Odstranění katalogu"><gov-icon name="trash"></gov-icon></a>
             </div>
           </div>
