--- a/server/http/dataset-detail/dataset-detail-cs.html
+++ b/server/http/dataset-detail/dataset-detail-cs.html
@@ -9,6 +9,7 @@
   <link rel="alternate" href="/datová-sada" hreflang="cs">
   <link rel="alternate" href="/dataset" hreflang="en">
   <link type="text/css" rel="stylesheet" href="/assets/catalog/css/dataset-detail.css">
+  <link type="text/css" rel="stylesheet" href="/assets/catalog/css/resource-detail.css">
   <script src="/assets/catalog/js/dataset-detail.js"></script>
 </head>
 
