--- a/server/http/application-detail/application-detail-en.html
+++ b/server/http/application-detail/application-detail-en.html
@@ -9,6 +9,7 @@
   <link rel="alternate" href="/detail-aplikace" hreflang="cs">
   <link rel="alternate" href="/application" hreflang="en">
   <link type="text/css" rel="stylesheet" href="/assets/catalog/css/resource-list.css">
+  <link type="text/css" rel="stylesheet" href="/assets/catalog/css/resource-detail.css">
 </head>
 
 <body>
