--- a/server/http/suggestion-detail/suggestion-detail-en.html
+++ b/server/http/suggestion-detail/suggestion-detail-en.html
@@ -9,6 +9,7 @@
   <link rel="alternate" href="/návrh-na-datovou-sadu-k-otevření" hreflang="cs">
   <link rel="alternate" href="/suggestion-for-dataset-to-be-opened" hreflang="en">
   <link type="text/css" rel="stylesheet" href="/assets/catalog/css/resource-list.css">
+  <link type="text/css" rel="stylesheet" href="/assets/catalog/css/resource-detail.css">
 </head>
 
 <body>
