Update catalog list item
Update CSS, add link to validator, #44.

--- a/server/http/local-catalog-list/local-catalog-list-en.html
+++ b/server/http/local-catalog-list/local-catalog-list-en.html
@@ -8,6 +8,7 @@
   <link rel="canonical" href="/local-catalogs">
   <link rel="alternate" href="/lokální-katalogy" hreflang="cs">
   <link rel="alternate" href="/local-catalogs" hreflang="en">
+  <link type="text/css" rel="stylesheet" href="/assets/catalog/css/catalog-list.css">
 </head>
 
 <body>
@@ -44,9 +45,10 @@
               </div>
             </div>
             <div class="gov-card__footer" style="font-size: x-large;">
-              <a href="{{homepage}}" title="Home page of the catalog"><gov-icon name="house-door-fill"></gov-icon></a>
-              <a href="{{endpointURL}}" title="Endpoint"><gov-icon name="link-45deg"></gov-icon></a>
+              <a href="{{homepageUrl}}" title="Home page of the catalog"><gov-icon name="house-door-fill"></gov-icon></a>
+              <a href="{{endpointUrl}}" title="Endpoint"><gov-icon name="link-45deg"></gov-icon></a>
               <a href="{{deleteUrl}}" title="Delete the catalog"><gov-icon name="trash"></gov-icon></a>
+              <a href="{{validateUrl}}" title="Catalog validation"><gov-icon name="communication" type="complex"></gov-icon></a>
             </div>
           </div>
         </gov-card>
