--- a/server/http/local-catalog-list/local-catalog-list-cs.html
+++ b/server/http/local-catalog-list/local-catalog-list-cs.html
@@ -8,6 +8,7 @@
   <link rel="canonical" href="/local-catalogs">
   <link rel="alternate" href="/lokální-katalogy" hreflang="cs">
   <link rel="alternate" href="/local-catalogs" hreflang="en">
+  <link type="text/css" rel="stylesheet" href="/assets/catalog/css/catalog-list.css">
 </head>
 
 <body>
@@ -28,7 +29,7 @@
               <gov-icon name="box-arrow-up-right"></gov-icon>
             </a>
           </div>
-          <div class="gov-card__inner">
+          <div class="gov-card__inner grow">
             <div class="gov-card__main">
               <div>
                 {{title}}
@@ -43,10 +44,11 @@
                 </a>
               </div>
             </div>
-            <div class="gov-card__footer" style="font-size: x-large;">
-              <a href="{{homepage}}" title="Domovská stránka katalogu"><gov-icon name="house-door-fill"></gov-icon></a>
-              <a href="{{endpointURL}}" title="Endpoint"><gov-icon name="link-45deg"></gov-icon></a>
+            <div class="gov-card__footer flex-space-evenly" style="font-size: x-large;">
+              <a href="{{homepageUrl}}" title="Domovská stránka katalogu"><gov-icon name="house-door-fill"></gov-icon></a>
+              <a href="{{endpointUrl}}" title="Endpoint"><gov-icon name="link-45deg"></gov-icon></a>
               <a href="{{deleteUrl}}" title="Odstranění katalogu"><gov-icon name="trash"></gov-icon></a>
+              <a href="{{validateUrl}}" title="Validace katalogu"><gov-icon name="communication" type="complex"></gov-icon></a>
             </div>
           </div>
         </gov-card>
