--- a/server/http/local-catalog-list/local-catalog-list-en.html
+++ b/server/http/local-catalog-list/local-catalog-list-en.html
@@ -29,7 +29,7 @@
               <gov-icon name="box-arrow-up-right"></gov-icon>
             </a>
           </div>
-          <div class="gov-card__inner">
+          <div class="gov-card__inner grow">
             <div class="gov-card__main">
               <div>
                 {{title}}
