--- a/server/http/publisher-list/publisher-list-cs.html
+++ b/server/http/publisher-list/publisher-list-cs.html
@@ -8,6 +8,7 @@
   <link rel="canonical" href="/publishers">
   <link rel="alternate" href="/poskytovatelé" hreflang="cs">
   <link rel="alternate" href="/publishers" hreflang="en">
+  <link type="text/css" rel="stylesheet" href="/assets/catalog/css/publisher-list.css">
 </head>
 
 <body>
@@ -30,7 +31,7 @@
               <gov-icon name="box-arrow-up-right"></gov-icon>
             </a>
           </div>
-          <div class="gov-card__inner">
+          <div class="gov-card__inner grow">
             <div class="gov-card__main">
               <div class="flex-row x-large gap-4">
                 <a href="{{dashboardMonthly}}" title="Dashboard - měsíční průměry">
