--- a/server/http/dataset-detail/dataset-detail-cs.html
+++ b/server/http/dataset-detail/dataset-detail-cs.html
@@ -387,7 +387,7 @@
             </div>
             {{/with}}{{/if}}
             {{#if dataService}}{{#with dataService}}
-            <div class="distribution-item-wrap-column">
+            <div class="distribution-item-wrap-column data-service" data-iri="{{iri}}">
               <div>
                 <h5 class="gov-text--l gov-color--secondary-700">
                   Datová služba
