--- a/server/http/dataset-detail/dataset-detail-en.html
+++ b/server/http/dataset-detail/dataset-detail-en.html
@@ -387,7 +387,7 @@
             </div>
             {{/with}}{{/if}}
             {{#if dataService}}{{#with dataService}}
-            <div class="distribution-item-wrap-column">
+            <div class="distribution-item-wrap-column data-service" data-iri="{{iri}}">
               <div>
                 <h5 class="gov-text--l gov-color--secondary-700">
                   Data service
@@ -395,7 +395,7 @@
               </div>
               <ul>
                 <li class="endpointDescription">
-                  <a href="{{endpointDescription}}">Endpoint description"</a>
+                  <a href="{{endpointDescription}}">Endpoint description</a>
                   <span class="quality"></span>
                 </li>
                 <li class="endpointUrl">
